Mon May 21 14:15:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * docs/dynany/index.html:
        Missed updating this document with changes of Wed Feb 29 16:30:00 UTC 2012.
        DynamicAny Value and BoxedValue types are implimented.

Sat May 19 14:28:57 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.2 released.

Thu May 17 18:35:22 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * NEWS:
          Updates for 2.1.2

Thu May 17 08:13:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/RTCORBA/Activity/Task_Stats.cpp:
          Fixed conversion warning

Wed May 16 14:05:33 UTC 2012  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
          Changed DOxygen documentation.

Wed May 16 06:42:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:
        * orbsvcs/orbsvcs/Sched/Scheduler.cpp:
        * orbsvcs/orbsvcs/Time/Timer_Helper.cpp:
          More cleanup due to removal of NSK

Tue May 15 18:17:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/ast/ast_expression.cpp:
        * TAO_IDL/ast/ast_union.cpp:
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/include/ast_expression.h:
        * examples/RTCORBA/Activity/Task_Stats.inl:
        * examples/RTCORBA/Activity/Task_Stats.cpp:
        * examples/RTCORBA/Activity/Thread_Task.cpp:
        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/examples/Log/Basic/TLS_Client.cpp:
        * orbsvcs/examples/Log/Event/Event_Supplier.cpp:
        * orbsvcs/examples/Log/Notify/Notify_Supplier.cpp:
        * orbsvcs/examples/Log/RTEvent/RTEvent_Supplier.cpp:
        * orbsvcs/orbsvcs/IFRService/Container_i.cpp:
        * orbsvcs/orbsvcs/IFRService/UnionDef_i.cpp: